# freePBX_Tools

./: .copilotignore  .env  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CODING_RULES.md  COMPREHENSIVE_SCRAPING.md  DEPENDENCIES.md  ENVIRONMENT.md  EXPORT_COOKIES_GUIDE.md  FULL_START.sh  INTEGRATION_COMPLETE.md  KNOWN_ISSUES.md  LES_summary.csv  LOG_ANALYSIS.md  MANUAL_TEST_COMMANDS.txt  PHONE_CONFIG_ANALYSIS.md  PHONE_CONFIG_ANALYZER_QUICKREF.md  QUICK_TEST.md  README.md  REPO_MAP.md  RESTART.sh  RUNBOOK.md  RUNNING.md  RUN_APPS.md  SECURITY.md  SELECT s.company_name, COUNT(d.sql  TEST_KNOWLEDGE_BASE.md  VPBX_DATABASE_README.md  analysis_summary.csv  analyze_vpbx_phone_configs.py  batch_ticket_scrape.py  build_unified_kb.py  companyHandleSearch.sql  config.example.py  convert_cookies.py  cookies.txt  (+79 more)
lsbbw/: run.py  (+6 more)
webscraper/: .gitignore  E2E_REVIEW.md  README.md  STRUCTURAL_QUALITY_REVIEW.md  WEB_SCRAPER_REVIEW.md  __init__.py  __main__.py  _cdp_cookie_test.py  _cookie_test.py  _smoke_test.py  _storage_test.py  auth_diagnostics.py  chrome_cookies_live.py  chrome_debug_setup.bat  db.py  dev_server.py  errors.py  http_scraper.py  pyproject.toml  requirements.txt  requirements_api.txt  run_discovery.py  run_orders_scrape.bat  run_orders_scrape.ps1  test_all.ps1  ultimate_scraper.py  ultimate_scraper_config.py  ultimate_scraper_legacy.py  webscraper_config.py
webscraper-manager/: README.md  pyproject.toml
webscraper-manager/tests/: test_config.py  test_doctor.py
webscraper/Testing/: Testing.txt
webscraper/auth/: __init__.py  driver_factory.py  healthcheck.py  orchestrator.py  types.py
webscraper/browser/: edge_driver.py
webscraper/cli/: main.py
webscraper/configs/: settings.example.yaml
webscraper/core/: config_loader.py  paths.py
webscraper/docs/: ARCHITECTURE.md  artifacts_contract.md  auth_api_changelog.md  config_map.md  orchestration_migration.md
webscraper/kb/: indexer.py
webscraper/legacy/: README.md  batch_ticket_scrape.py  convert_cookies.py  extract_browser_cookies.py  scrape_123net_docs.py  scrape_123net_docs_selenium.py  selenium_to_kb.py  ticket_scraper.py  ticket_scraper_session.py
webscraper/lib/: db_path.py
webscraper/scrape/: retry_logic.py  runner.py  ticket_details.py
webscraper/scripts/: auth_probe.py  dev_ticket_stack.py  discover_pages.py  doctor.py  scrape_orders.py  seed_and_fetch.py
webscraper/test-output/: debug_log_demo.txt
(+710 files in other folders)
