[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webscraper-manager"
version = "0.1.0"
description = "CLI manager for FreePBX webscraper workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "freePBX Tools" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "psutil>=5.9",
  "requests>=2.31",
  "selenium>=4.20",
]

[project.scripts]
webscraper-manager = "webscraper_manager.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
