[project]
name = "webscraper"
version = "0.1.0"
description = "Ticket scraper for 123NET handles"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
