[project]
name = "webscraper"
version = "0.1.0"
description = "Ticket scraper for 123NET handles"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart>=0.0.9",
    "websocket-client>=1.7.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
    "pycryptodome>=3.19",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
